Correction : persistance des actions faites